# AudioPathAnalyzer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conf.h  main.cpp
analyzer/: AnalysisResult.h  Analyzer.cpp  Analyzer.h  DataAcquisition.cpp  DataAcquisition.h  Experiment.h  Measurement.cpp  Measurement.h  Smoothing.tcc
matlab/: adc_noise.m  fft_peaks.m  ftt_422.mat  ftt_441_49.mat
signalreader/: InputSignalReader.cpp  InputSignalReader.h
singen/: SineWaveGenerator.cpp  SineWaveGenerator.h
